fix: Add specific width to #welcomeBox for mobile version as the horizontal edges were partially covered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,10 @@ footer {
     margin-top: 50px;
 }
 
+#welcomeBox {
+    width: 300px;
+}
+
 
 #contentBox {
     min-height: 300px;
